force-app/main/default/objects/VCC_Progress_Note_Configuration__mdt/VCC_Progress_Note_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Used for identifying what Attributes belong to a particular Progress Note or Addendum Type.</description>
    <label>VCC Progress Note Configuration</label>
    <pluralLabel>Progress Note Configurations</pluralLabel>
</CustomObject>