force-app/main/default/objects/VCC_Progress_Note_Configuration__mdt/fields/VCC_Emphasized_Sections__c.field-meta.xml
<CustomField>
    <fullName>VCC_Emphasized_Sections__c</fullName>
    <inlineHelpText>Progress Note sections specified here will stand out from the rest on the &apos;Review and Sign&apos; step of the Progress Note flow.</inlineHelpText>
    <label>Emphasized Sections</label>
    <type>TextArea</type>
</CustomField>