force-app/main/default/objects/VCC_Progress_Note_Configuration__mdt/fields/VCC_Enable_Procedure_Code__c.field-meta.xml
<CustomField>
    <fullName>VCC_Enable_Procedure_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Procedure Code</label>
    <type>Checkbox</type>
</CustomField>