force-app/main/default/objects/VCC_Progress_Note_Configuration__mdt/fields/VCC_Excluded_Page_Layout_Sections__c.field-meta.xml
<CustomField>
    <fullName>VCC_Excluded_Page_Layout_Sections__c</fullName>
    <defaultValue>&quot;Custom Links&quot;&amp;&quot;,&quot;&amp; &quot;Information&quot;&amp;&quot;,&quot;&amp; &quot;System Information&quot;</defaultValue>
    <label>Excluded Page Layout Sections</label>
    <type>TextArea</type>
</CustomField>