force-app/main/default/objects/VCC_Progress_Note_Configuration__mdt/fields/VCC_Include_Layout_Spaces__c.field-meta.xml
<CustomField>
    <fullName>VCC_Include_Layout_Spaces__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows blank spaces to be included during the write note process</description>
    <label>Include Layout Spaces</label>
    <type>Checkbox</type>
</CustomField>