force-app/main/default/objects/VCC_Progress_Note_Configuration__mdt/fields/VCC_Personas__c.field-meta.xml
<CustomField>
    <fullName>VCC_Personas__c</fullName>
    <label>Personas</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>