force-app/main/default/objects/VCC_Progress_Note_Configuration__mdt/fields/VCC_Record_Type_API_Name__c.field-meta.xml
<CustomField>
    <fullName>VCC_Record_Type_API_Name__c</fullName>
    <label>Record Type API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>