force-app/main/default/objects/VCC_Progress_Note_Configuration__mdt/fields/VCC_Require_Primary_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>VCC_Require_Primary_Diagnosis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Primary Diagnosis</label>
    <type>Checkbox</type>
</CustomField>