force-app/main/default/objects/VCC_Progress_Note_Configuration__mdt/fields/VCC_VistA_Note_Title__c.field-meta.xml
<CustomField>
    <fullName>VCC_VistA_Note_Title__c</fullName>
    <inlineHelpText>This name should be an exact match of the name in &apos;Location to Note IEN Mapping&apos; custom setting.</inlineHelpText>
    <label>VistA Note Title</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>