force-app/main/default/objects/VCC_Progress_Note_Configuration__mdt/listViews/Default.listView-meta.xml
<ListView>
    <fullName>Default</fullName>
    <columns>MasterLabel</columns>
    <columns>VCC_Record_Type_API_Name__c</columns>
    <columns>VCC_Page_Layout_Name__c</columns>
    <columns>VCC_Creates_Encounter__c</columns>
    <columns>VCC_VistA_Note_Title__c</columns>
    <columns>VCC_Personas__c</columns>
    <filterScope>Everything</filterScope>
    <label>Default</label>
</ListView>